# Consistent-Crystal-Conventions

./: .gitignore  README.md  README.rst  pyproject.toml  readthedocs.yaml
common_errors/: 01_active_passive.py  02_ambiguous_fundamental_zones.py  03_Euler_triplets.py  04_irreversible_disorientations.py  05_Inverted_orientation.py  06_row_vs_col_major.py  07_different_common_convetions.py  Euler_triplets.py  Orientation_inversion.py  README.rst  Row_vs_Column_Major.py  scipy_vs_orix_vs_mtex.py
conventions/: 00-Basic_Definitions_and_Visualizations.py  00_Basic_Definitions_and_Visualizations.py  00_Basics.py  01-Quaternion_Rotations.py  01_Quaternion_Rotations.py  01_Symmetry.py  02_Orientations.py  02_vectors_and_transforms.py  03_Misorientations.py  03_Symmetry.py  04-Crystal_lattices.py  04_Combining_operators.py  04_Crystal_lattices.py  05_Disorientations.py  README.rst
examples/: 01_active_passive.py  Active_vs_Passive.py  README.rst  ambiguous_fundamental_zones.py  irreversible_disorientations.py  problem_1.py  scipy_vs_orix_vs_mtex.py
other/: 01_transforms.py  02_projecting_quaternion_space.py  README.rst
sphinx/: Makefile  conf.py  index.rst  sg_execution_times.rst
sphinx/conventions/: index.rst
sphinx/reference/: index.rst
sphinx/user/: contributing.rst  index.rst  installation.rst  motivation.rst  references.rst
xtal_code/: __init__.py
